apps/simple-chat/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-chat-frontend-service
  namespace: apps
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - port: 3000
  selector:
    app: simple-chat-frontend
